# golf-tracker

./: .gitignore  pyproject.toml  requirements.txt
adams_golf_data/: rounds.xlsx  scorecards.xlsx  ~$scorecards.xlsx
golftrack/: __init__.py  data_loader.py  golf_stats.py  tracker_data.py  tracking_data.py
pygolf/: __init__.py  data.py  hole_stats.py  tracking_data.py
test/: test_data.py  test_data_loader.py  test_data_loader.xlsx
test/test_data/: expected_tracking_data.parquet  expected_tracking_data_derived.parquet  scorecards.xlsx
test/test_data_files/: courses.xlsx  rounds.xlsx
