[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pygolf"
authors = [{name = "Adam Lynch", email = "adamclynch03@gmail.com"}]
description = "Tool for tracking and analyzing golf data"
readme = "README.md"
version = "0.1.0"
dependencies = [
    "pandas",
    "openpyxl",
    "numpy",
    "fastparquet",
]